# pp-injector-ui

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  README_IA.es.md  README_IA.md  esp_idf_project_configuration.json  flash_in_linux.sh  monitor_in_linux.sh  partitions.csv  partitions_16mb.csv  partitions_8mb.csv  partitions_ppinjector_4mb.csv  sdkconfig.defaults  version.txt
build_ppinjectorelecrow/: sdkconfig
buildcfg/: PPInjectorElecrow.components.cmake  PPInjectorWave.cmakecache.cmake  PPInjectorWave.env  sdkconfig.PPInjectorElecrow.defaults  sdkconfig.PPInjectorWave.defaults
components/NetVars/: CMakeLists.txt  NetVars.c
components/NetVars/include/: NetVars.h
components/OTA/: CMakeLists.txt  Kconfig.projbuild  OTA.c  OTA_netvars.c  OTA_netvars_fragment.c_  netvars.csv
components/OTA/ble_helper/: nimble_gatts.c
components/OTA/ble_helper/include/: nimble_gatts.h
components/OTA/include/: OTA.h  OTA_netvar_types_fragment.h_  OTA_netvars.h
components/PPInjectorUI/: CMakeLists.txt  Kconfig.projbuild  PPInjectorUI.c  PPInjectorUI_display_comms.cpp  PPInjectorUI_netvars.c  PPInjectorUI_prd_ui.cpp  PPInjectorUI_ui_bridge.cpp
components/PPInjectorUI/include/: PPInjectorUI.h  PPInjectorUI_display_comms.h  PPInjectorUI_netvar_types_fragment.h_  PPInjectorUI_netvars.h  PPInjectorUI_prd_ui.h
components/PPInjectorUI/ui/: actions.h  actions_impl.cpp  actions_impl.h  eez-flow.cpp  eez-flow.h  fonts.h  screens.c  screens.h  structs.h  styles.h  ui.c  ui.h  vars.h
components/PrjCfg/: CMakeLists.txt  Kconfig.projbuild  PrjCfg.c  PrjCfg_netvars.c  PrjCfg_netvars_fragment.c_  netvars.csv
components/PrjCfg/include/: PrjCfg.h  PrjCfg_netvar_types_fragment.h_  PrjCfg_netvars.h
components/Provisioning/: CMakeLists.txt  Kconfig.projbuild  Provisioning.c  Provisioning_netvars.c  Provisioning_netvars_fragment.c_  README.md  netvars.csv
components/Provisioning/include/: Provisioning.h  Provisioning_netvar_types_fragment.h_  Provisioning_netvars.h
components/TouchScreen/: .gitignore  CMakeLists.txt  Kconfig.projbuild  TouchScreen.c  TouchScreen_display_4ds.c  TouchScreen_display_waveshare.c  TouchScreen_netvars.c  TouchScreen_netvars_fragment.c_  idf_component.yml  lvgl_port.c  lvgl_port.h  netvars.csv  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
components/TouchScreen/include/: TouchScreen.h  TouchScreen_display.h  TouchScreen_netvar_types_fragment.h_  TouchScreen_netvars.h
components/nimble_utils/: CMakeLists.txt  esp_central.h  esp_peripheral.h  misc.c  nimble_utils_common.h
components/protocomm/src/transports/: protocomm_nimble.c
docs/: PRD.md
main/: CMakeLists.txt  app_main.c
poris/: LICENSE.md  README.md  ReadmeIA.md  add_component_integration.py  build.sh  clean_variant.sh  ensure_variant.py  gen_configs.py  gen_netvars.py  gen_variant.py  new_component.py  poriscomp2project.py  prebuild.sh
poris/templates/$$1/: $$1.c  $$1_netvars.c  $$1_netvars_fragment.c_  CMakeLists.txt  Kconfig.projbuild
poris/templates/$$1/include/: $$1.h  $$1_netvars.h
poris/templates/$$1lib/: $$1.c  CMakeLists.txt  Kconfig.projbuild
poris/templates/$$1lib/include/: $$1.h
poris_components/: README.md
scripts/: ble_client.py  ble_server.py  config_secrets.py.example  make_release_ppinjectorelecrow.py  publish_ota_ppinjectorelecrow.py  rs485_ppinjector_test.py  uart_command_console.py
sdkcfg/: feat_ppinjector_elec.defaults  feat_ppinjector_wave.defaults  feat_s3_touch.defaults  feat_touchscreen4ds_lvgl.defaults  feat_touchscreen_lvgl.defaults  feat_touchscreen_lvgl_elec.defaults  feat_usb.defaults  target_esp32s3.defaults
variants/: variants.yml
